Fixed overflow scroll to work

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -290,19 +290,16 @@ p {
 .fa {
 	display: inline-block;
 	padding: 20px 10px 50px;
-	font-size: 30px;
-	width: 6vh;
+	font-size: 100px;
+	width: 3%;
 	text-decoration: none;
 	position: relative;
 	color: white;
 	background-color: #333232;
-	height: .3vh;
-	justify-content: center;
-	align-items: center;
-	top: -5.5vh;
-	right: .2vw;
+	height: 0.5vh;
+	bottom: 0;
 }
-  
+
 /* Add a hover effect if you want */
 .fa:hover {
 	opacity: 0.7;
@@ -310,15 +307,6 @@ p {
 footer {
     display: block;
 }
-.socials{
-	background-color:#1b242f;
-	padding: 70px 0 70px 0;
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-	height: 2%;
-}
-
 .navbar {
 	width: 85%;
 	margin: 0 auto;
@@ -658,6 +646,7 @@ a.animated-button.thar-four:before {
 
 .section {
   text-align: center;
+  top: 0;
   font-size: 2em;
 }
 .contactHeader{
@@ -710,8 +699,7 @@ h3 {
 	background: transparent;
 	justify-content: center;
 	align-items: center;
-	width: 70%;
-	position: relative;
+	width: 30%;
 }
 
 /* Add styles to 'label' selector */
